Fix post-footer overflow, align subscribe/footer with content column
- Move post-footer outside .post-content to fix overflow:hidden clipping Disqus
- Add has-article-toc class to #main for TOC page alignment
- Offset subscribe/footer padding-left on TOC pages to align with content column
- Allow clearReading on non-post page types

--- a/src/scss/components/_toc-sidebar.scss
+++ b/src/scss/components/_toc-sidebar.scss
@@ -138,4 +138,11 @@
   .main-content-wrap.has-toc > *:not(.toc-sidebar) {
     grid-column: 2;
   }
+
+  // Align post-footer, subscribe, and footer with the content column when TOC is present
+  #main.has-article-toc .post-footer.main-content-wrap,
+  #main.has-article-toc > .subscribe.main-content-wrap,
+  #main.has-article-toc > #footer.main-content-wrap {
+    padding-left: calc(#{map-get($main-content, padding-right-left)} + 200px + 20px);
+  }
 }
